# comicsdb

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: DbDefinition.cpp  DbDefinition.hpp  IDatabaseManager.hpp  ORMManager.cpp  ORMManager.hpp  Sqlite3ErrorCodes.cpp  Sqlite3ErrorCodes.hpp  Sqlite3Manager.cpp  Sqlite3Manager.hpp  main.cpp  tools.hpp
app/tests/: SQlite3ErrorCodesTests.hpp  test.cpp  test.json
